<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="never|withText"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_restart"
        android:icon="@drawable/ic_action_restart"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_restart">
    </item>
    <item
        android:id="@+id/menu_intro"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="never|withText"
        android:title="@string/menu_intro">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="never|withText"
        android:title="@string/menu_about">
    </item>

</menu>