<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/row_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/label_guess"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.yhlab.component.guessnumber.GuessedNumber
            android:id="@+id/guessed_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:digitCount="4"
            app:symbols="0123456789?" >
        </com.yhlab.component.guessnumber.GuessedNumber>
    </TableRow>

    <TableRow
        android:id="@+id/row_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/label_result"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.yhlab.component.guessnumber.GuessedResult
            android:id="@+id/guessed_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:digitUsed="4" >
        </com.yhlab.component.guessnumber.GuessedResult>

        <Button
            android:id="@+id/btn_result_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_result_add" />
    </TableRow>

</TableLayout>